--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="left">
-            <h1> Lagelu Grammar School</h1>
+            <h1> Lagelu Grammar School 001</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere pariatur a vel aut dolorem 
                 voluptas consequuntur, at, veniam animi
                 consectetur quas ratione nemo deleniti! Quae similique impedit beatae eos sunt!
